--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                             <div class="card bg-light shadow-sm border-0 p-4">
                                 <div class="card-body d-flex flex-column justify-content-center align-items-center text-center">
                                     <i class="fa fa-file-text fa-3x" aria-hidden="true"></i>
-                                    <h5>Apply</h5>
-                                    <p>FIll out a simple form for the dog you want to adopt.</p>
+                                    <h5>Select</h5>
+                                    <p>Select the theme you like</p>
                                 </div>
                             </div>
                         </div>
@@ -141,8 +141,8 @@
                             <div class="card bg-light shadow-sm border-0 p-4">
                                 <div class="card-body d-flex flex-column justify-content-center align-items-center text-center">
                                     <i class="fa fa-id-card fa-3x" aria-hidden="true"></i>
-                                    <h5>Verify</h5>
-                                    <p>Verification is needed to ensure that you are an Indian Citizen.</p>
+                                    <h5>Contact us</h5>
+                                    <p>Fill up the contact form</p>
                                 </div>
                             </div>
                         </div>
@@ -150,8 +150,8 @@
                             <div class="card bg-light shadow-sm border-0 p-4">
                                 <div class="card-body d-flex flex-column justify-content-center align-items-center text-center">
                                     <i class="fa fa-check fa-3x" aria-hidden="true"></i>
-                                    <h5>Check</h5>
-                                    <p>Once we are sure that you can afford to pet a dog. You can adopt the dog.</p>
+                                    <h5>It's Done</h5>
+                                    <p>Our team will get it done.</p>
                                 </div>
                             </div>
                         </div>
