--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                 <div class="card-body d-flex flex-column justify-content-center align-items-center text-center">
                                     <i class="fa fa-file-text fa-3x" aria-hidden="true"></i>
                                     <h5>Select</h5>
-                                    <p>Select the theme you like</p>
+                                    <p>Select the theme you like.</p>
                                 </div>
                             </div>
                         </div>
